# aoc2020

./: .gitignore  Cargo.toml  README.md  justfile  run
benches/: bench_main.rs  day_001.rs  day_002.rs  day_003.rs  day_004.rs  day_005.rs  day_007.rs  day_008.rs  day_009.rs  day_010.rs  day_011.rs  day_012.rs  day_014.rs  day_015.rs  day_016.rs  day_017.rs  day_018.rs  day_019.rs  day_020.rs  day_021.rs  day_022.rs  day_023.rs  day_024.rs  day_025.rs
ci/: pipeline.yml
ci/tasks/: check-and-compile.yml  run-solutions.yml  test.yml
examples/001_report-repair/: README.md  main.rs
examples/002_password-philosophy/: README.md  main.rs
examples/003_toboggan-trajectory/: README.md  main.rs
examples/004_passport_processing/: README.md  main.rs
examples/005_binary-boarding/: README.md  main.rs
examples/006_custom-customs/: README.md  main.rs
examples/007_handy-haversacks/: README.md  main.rs
examples/008_handheld-halting/: README.rs  main.rs
examples/008_handheld-halting/profile/: iterative.rs  parallel.rs  recursive.rs
examples/009_encoding-error/: README.md  main.rs
examples/009_encoding-error/profile/: part2_fast.rs  part2_slow.rs
examples/010_adapter-array/: README.md  main.rs
examples/010_adapter-array/profile/: permutations_fast.rs  permutations_faster.rs
examples/011_seating-system/: README.md  main.rs
examples/012_rain-risk/: README.md  main.rs
examples/013_shuttle-search/: README.md  main.rs
examples/014_docking-data/: README.md  main.rs
examples/015_rambunctious-recitation/: README.md  main.rs
examples/015_rambunctious-recitation/profile/: part_one.rs  part_two.rs
examples/016_ticket-translation/: main.rs
examples/017_conway-cubes/: main.rs
examples/018_operation-order/: main.rs
examples/019_monster-message/: README.md  main.rs
examples/020_jurassic-jigsaw/: README.md  main.rs
examples/021_allergen-assessment/: README.md  main.rs
examples/022_crab-combat/: README.md  main.rs
examples/022_crab-combat/profile/: recursive.rs
examples/023_crab-cups/: README.md  main.rs
examples/024_lobby-layout/: main.rs
examples/025_combo-breaker/: README.md  main.rs
scripts/: flame  mem  run  run_all
src/: adapter.rs  boarding.rs  calculator.rs  combat.rs  console.rs  cups.rs  customs.rs  docking.rs  encryption.rs  error.rs  expense.rs  food.rs  game.rs  jigsaw.rs  lib.rs  lobby.rs  luggage.rs  message.rs  navigation.rs  passport.rs  password.rs  power.rs  seating.rs  shuttle.rs  ticket.rs  toboggan.rs  util.rs  xmas.rs
(+2 files in other folders)
