[package]
name = "aoc"
version = "0.1.0"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rayon = "1.5.0"

[dev-dependencies]
criterion = "0.3.3"
proptest = "0.10.1"

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "008_profile_part2_iter"
path = "examples/008_handheld-halting/profile/iterative.rs"

[[example]]
name = "008_profile_part2_par"
path = "examples/008_handheld-halting/profile/parallel.rs"

[[example]]
name = "008_profile_part2_recur"
path = "examples/008_handheld-halting/profile/recursive.rs"
