[package]
name = "aoc"
version = "0.1.0"
authors = ["Matt Chun-Lum <matt@questionable.engineering>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools = "0.9.0"
rayon = "1.5.0"
regex = "1.4.2"

[dev-dependencies]
criterion = "0.3.3"
proptest = "0.10.1"

[[bench]]
name = "bench_main"
harness = false

[[example]]
name = "008_profile_part2_iter"
path = "examples/008_handheld-halting/profile/iterative.rs"

[[example]]
name = "008_profile_part2_par"
path = "examples/008_handheld-halting/profile/parallel.rs"

[[example]]
name = "008_profile_part2_recur"
path = "examples/008_handheld-halting/profile/recursive.rs"

[[example]]
name = "009_profile_part2_fast"
path = "examples/009_encoding-error/profile/part2_fast.rs"

[[example]]
name = "009_profile_part2_slow"
path = "examples/009_encoding-error/profile/part2_slow.rs"

[[example]]
name = "010_profile_part2_fast"
path = "examples/010_adapter-array/profile/permutations_fast.rs"

[[example]]
name = "010_profile_part2_faster"
path = "examples/010_adapter-array/profile/permutations_faster.rs"

[[example]]
name = "015_profile_part1"
path = "examples/015_rambunctious-recitation/profile/part_one.rs"

[[example]]
name = "015_profile_part2"
path = "examples/015_rambunctious-recitation/profile/part_two.rs"
